# onetimepad

./: Cargo.toml  README.md
.github/workflows/: rust-build.yml  rust-publish.yml
src/: lib.rs  main.rs
