[package]
name = "onetimepad"
version = "0.1.0"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
license = "MIT"
description = "Quickly calculate values for a one time pad."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "onetimepad"
path = "src/main.rs"
required-features = [ "binary" ]

[features]
binary = [ "dep:clap", "clap/derive", "rand" ]
rand = [ "dep:rand" ]

[dependencies]
clap = { version = "^4.3", optional = true }
rand = { version = "0.8.5", optional = true }
